added reading page for 201

--- a/Course 201.html/201-2.md
+++ b/Course 201.html/201-2.md
@@ -2,19 +2,73 @@
 
 ## Why is it important to use semantic elements in our HTML
 
-### Semantic elements are needed to keep order and to make sure that the code appears correct for both the user and the program developer. 
+### Semantic elements are needed to keep order and to make sure that the code appears correct for both the user and the program developer
 
-### Using Semantic elements makes sure that we are using the correct elements, giving our content the correct meaning, function, or appearance. 
+### Using Semantic elements makes sure that we are using the correct elements, giving our content the correct meaning, function, or appearance
 
 ## How many levels of headings are thre in HTML?
 
-### There are 6 heading levels in HTML.
+### There are 6 heading levels in HTML
 
 ## What are some uses for the <sup> and <sub> elements?
 
-### Some of the uses for the <sup> and <sub> include writing formulas in chemistry, math, and dates. 
+### Some of the uses for the <sup> and <sub> include writing formulas in chemistry, math, and dates
 
 ## When using the <abbr> element, what attribute must be added to provide the full expansion of the term?
 
-### The title as the value of the attribute. 
+### The title as the value of the attribute
 
+# Basics of CSS
+
+## What are ways we can apply CSS to our HTML?
+
+### We can use an external sheet, an inline sheet, and internal styleline
+
+## Why should we avoid using inline styles?
+
+### It is the least efficient implementation of CSS for maintenance. It make the editing very tedious and it also mises (CSS) presentational code with HTML contenct. This makes it really complexed to understand. Separating code and content makes maintenance easier for all who work on the website
+
+## Block Code answers
+
+1. The representing selector is h2
+2. The CSS declarations components are color:black padding: 5px
+3. The components that are considered properties are color:black and padding:5px. These demontrate a property-value pair.
+
+# Learn Java Script (JS)
+
+## What data type is a sequence of text enclosed in single quote marks?
+
+### A string
+
+## List 4 types of JavaScript operators
+
+1. Addition
+2. Subraction/Multiplication/Division
+3. Assignment
+4. Strict equality
+
+## Describe a real world Problem you could solve with a Function
+
+### A function could help teach people the basics of coding
+
+## Conditionals
+
+### An if statement checks a condition/statement and if it evaluates to true, then the code block will execute
+
+## What is the use of an else if?
+
+### To give the return respose two or more outcomes
+
+## List 3 different types of comparison operators
+
+1. === and !== — test if one value is identical to, or not identical to, another.
+2. < and > — test if one value is less than or greater than another.
+3. <= and >= — test if one value is less than or equal to, or greater than or equal to, another.
+
+## What is the difference between the logical operator && and ||?
+
+### && — AND; allows you to chain together two or more expressions so that all of them have to individually evaluate to true for the whole expression to return true
+
+### || — OR; allows you to chain together two or more expressions so that one or more of them have to individually evaluate to true for the whole expression to return true
+
+### information was gathered at link: (href=www.<https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/conditionals>)
