made changes to front page

--- a/Course 201.html/201-2.md
+++ b/Course 201.html/201-2.md
@@ -71,6 +71,6 @@
 
 ### || — OR; allows you to chain together two or more expressions so that one or more of them have to individually evaluate to true for the whole expression to return true
 
-### information was gathered at link: (href=www.<https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/conditionals>)
+### information was gathered [here](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/conditionals)
 
 # Things I want to know more about
